@@ -1,26 +1,27 @@
 import QtQuick 2.15
 import QtQuick.Controls 2.3 as QQC2
 import QtQuick.Layouts 1.15
+import "../../Mpdw.js" as Mpdw
 
 RowLayout {
     Repeater {
         model: [
             {
-                icon: "media-playback-playing",
+                icon: Mpdw.icons.placeQueue,
                 page: queuePage,
                 shortcut: queuePage.globalShortcut,
                 text: qsTr("Queue"),
                 tooltip: qsTr("Show Queue")
             },
             {
-                icon: "view-media-artist",
+                icon: Mpdw.icons.placeArtist,
                 page: albumartistsPage,
                 shortcut: albumartistsPage.globalShortcut,
                 text: qsTr("Artists"),
                 tooltip: qsTr("Show Artists")
             },
             {
-                icon: "view-media-playlist",
+                icon: Mpdw.icons.placePlaylist,
                 page: playlistPage,
                 shortcut: playlistPage.globalShortcut,
                 text: qsTr("Playlists"),
