@@ -1,0 +1,44 @@
+.pragma library
+
+const icons = {
+    queuePlay: "media-playback-start",
+    queueAppend: "media-playlist-append",
+    queueInsert: "timeline-insert",
+    queueConsume: "draw-eraser",
+    queueRandom: "media-playlist-shuffle",
+    queueRepeat: "media-playlist-repeat",
+    queueFollowMode: "mark-location",
+    queueSaveNew: "document-save-as",
+    queueSaveReplace: "document-replace",
+    queueRemoveSingle: "edit-delete",
+    queueRemoveSelected: "edit-delete-remove",
+    queueClear: "edit-delete",
+    queuePlaceholderCover: "media-default-album",
+
+    playlistDelete: "edit-delete", 
+
+    selectAll: "edit-select-all-symbolic",
+    selectNone: "edit-select-none",
+    selectAbove: "arrow-up",
+    selectBelow: "arrow-down",
+    selectAlbum: "media-album-cover",
+    selectArtist: "view-media-artist",
+    selectMarker: "object-select-symbolic",
+
+    placeQueue: "media-playback-playing",
+    placeArtist: "view-media-artist",
+    placePlaylist: "view-media-playlist",
+
+    dialogOk: "dialog-ok",
+    dialogCancel: "dialog-cancel",
+    dialogClose: "dialog-close",
+
+    volumeMuted: "audio-volume-muted",
+    volumeLow: "audio-volume-low",
+    volumeMedium: "audio-volume-medium",
+    volumeHigh: "audio-volume-high",
+
+    appConfigGeneral: "configure",
+    clearCache: "emblem-warning",
+    mpdUpdate: "view-refresh",
+}
