@@ -1,3 +1,7 @@
+# next
+
+- Fixes missing icons in breeze icon theme
+
 # 5.2
 
 - Adds "action toolbar" on top of song-lists
